--- a/src/main/resources/iptables.vm
+++ b/src/main/resources/iptables.vm
@@ -32,9 +32,11 @@
 # $p.appProtocol/$p.program   $p.source_address --> $p.destination_address:$p.destination_port $p.protocol
 -A FORWARD -s $p.source_address -d $p.destination_address -i $p.input_interface -o $p.output_interface -p $p.protocol -m $p.protocol --dport $p.destination_port -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
 -A FORWARD -s $p.destination_address -d $p.source_address -i $p.output_interface -o $p.input_interface -p $p.protocol -m $p.protocol --sport $p.destination_port -m state --state RELATED,ESTABLISHED -j ACCEPT
-    #if ($p.type == "SNAT")    -t nat -A POSTROUTING -s $p.source_address  -d $p.destination_address -p $p.protocol  --dport $p.destination_port -o $p.output_interface -j SNAT --to-source $p.source_nat_address
-    #elseif($p.type == "DNAT") -t nat -A PREROUTING -d $p.destination_nat_address -p tcp -m tcp --dport $p.destination_nat_port -j DNAT --to-destination $p.destination_address:$p.destination_port
-    #end
+#if ($p.type == "SNAT")
+-t nat -A POSTROUTING -s $p.source_address  -d $p.destination_address -p $p.protocol  --dport $p.destination_port -o $p.output_interface -j SNAT --to-source $p.source_nat_address
+#elseif($p.type == "DNAT")
+-t nat -A PREROUTING -d $p.destination_nat_address -p tcp -m tcp --dport $p.destination_nat_port -j DNAT --to-destination $p.destination_address:$p.destination_port
+#end
 
 #end
 
