Fixed reverse zone generating

--- a/src/main/resources/bind-zone.mustache
+++ b/src/main/resources/bind-zone.mustache
@@ -11,6 +11,11 @@ $TTL  43200
 )
 @     NS     {{domain}}.
 
+;;
+;; todo find DNS servers!
+;;
+{{domain}}. A 127.0.0.1
+
 {{#addresses}}
 {{name}}       IN A {{ip}}
 {{/addresses}}
