Added linked VRRP support

--- a/src/main/resources/iptables.vm
+++ b/src/main/resources/iptables.vm
@@ -57,12 +57,20 @@
 #if ($vrrp-packets.size() > 0)
 #
 # VRRP
-# Drop  input packet:IN=eth0.204  SRC=10.2.4.12 DST=224.0.0.18 PROTO=112
-# Drop output packet:OUT=eth0.204 SRC=10.2.4.11 DST=224.0.0.18 PROTO=112
 #foreach( $p in $vrrp-packets )
 # $p.local_interface -> $p.remote_host.$p.remote_interface
 -A INPUT  -p vrrp -i $p.local_interface -s $p.remote_address -d 224.0.0.0/8 -j ACCEPT
 -A OUTPUT -p vrrp -o $p.local_interface -s $p.local_address  -d 224.0.0.0/8 -j ACCEPT
+
+#end
+#end
+
+#if ($linked-vrrp-packets.size() > 0)
+#
+# Linked VRRP
+#foreach( $p in $$linked-vrrp-packets )
+# $p.remote_host:$p.virtual_address -> broadcast
+-A INPUT  -p vrrp -i $p.local_interface -s $p.remote_address -d 224.0.0.0/8 -j ACCEPT
 
 #end
 #end
